# fastroute-rs

./: Cargo.toml  README.md
benches/: router.rs
src/: main.rs
