[package]
name = "fastroute-rs"
version = "0.1.1"
edition = "2021"
authors = ["Nikolajus Krauklis <nikolajus@gmail.com>"]
description = "A high performance regex router."
categories = ["network-programming", "algorithms"]
keywords = ["fastroute", "router", "path", "url"]
repository = "https://github.com/dzhibas/fastroute-rs"
readme = "README.md"

[dependencies]
regex-lite = "0.1.5"

[features]
default = []
__test_helpers = []

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
