[package]
name = "fastroute-rs"
version = "0.1.2"
edition = "2021"
authors = ["Nikolajus Krauklis <nikolajus@gmail.com>"]
description = "A high performance regex router."
categories = ["network-programming", "algorithms"]
keywords = ["fastroute", "router", "path", "url"]
repository = "https://github.com/dzhibas/fastroute-rs"
readme = "README.md"

[dependencies]
regex = "1.5.4"

[dev-dependencies]
criterion = "0.3.4"
actix-router = "0.2.7"
regex = "1.5.4"
regex-lite="0.1.5"
matchit = "0.7.3"

[features]
default = []
__test_helpers = []

[[bench]]
name = "router"
harness = false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
